@@ -3,8 +3,6 @@ package com.cdkj.gchf.common;
 import java.security.AlgorithmParameters;
 import java.security.Key;
 import java.security.Security;
-import java.util.Base64;
-import java.util.Base64.Decoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
@@ -12,29 +10,26 @@ import javax.crypto.spec.SecretKeySpec;
 
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
+
 public class AesUtils {
+    static {
+        // 导入支持AES/CBC/PKCS7Padding的Provider
+        Security.addProvider(new BouncyCastleProvider());
+    }
+
     public static void main(String[] args) throws Exception {
 
         // 原始数据
-        String data = "332526198003285124";
+        String data = "413024196804304833";
         // 密钥
-        String sessionKey = "c1043953304b67b526c1d85701885e36";
-        // 向量
-        String iv = "24484b262dd63dd5";
-
-        // 用Base64编码
-        Base64.Encoder encoder = Base64.getEncoder();
-        String baseData = encoder.encodeToString(data.getBytes());
-        String baseSessionKey = encoder.encodeToString(sessionKey.getBytes());
-        String baseIv = encoder.encodeToString(iv.getBytes());
-
-        // 导入支持AES/CBC/PKCS7Padding的Provider
-        Security.addProvider(new BouncyCastleProvider());
+        String sessionKey = "24484b262dd63dd584902a266bdbdca0";
 
         // 获取加密数据
-        String encryptedData = encrypt(data, sessionKey);
+        String encryptedData1 = encrypt(data, sessionKey);
 
-        System.out.println(encryptedData);
+        System.out.println(encryptedData1);
     }
 
     public static String encrypt(String data, String sessionKey) {
@@ -46,17 +41,16 @@ public class AesUtils {
             String iv = sessionKey.substring(0, 16);
 
             // 用Base64编码
-            Base64.Encoder encoder = Base64.getEncoder();
-            String baseData = encoder.encodeToString(data.getBytes());
-            String baseSessionKey = encoder
-                .encodeToString(sessionKey.getBytes());
-            String baseIv = encoder.encodeToString(iv.getBytes());
+            BASE64Encoder encoder = new BASE64Encoder();
+            String baseData = encoder.encode(data.getBytes());
+            String baseSessionKey = encoder.encode(sessionKey.getBytes());
+            String baseIv = encoder.encode(iv.getBytes());
 
             // 加密之前，先从Base64格式还原到原始格式
-            Decoder decoder = Base64.getDecoder();
-            byte[] dataByte = decoder.decode(baseData);
-            byte[] keyByte = decoder.decode(baseSessionKey);
-            byte[] ivByte = decoder.decode(baseIv);
+            BASE64Decoder decoder = new BASE64Decoder();
+            byte[] dataByte = decoder.decodeBuffer(baseData);
+            byte[] keyByte = decoder.decodeBuffer(baseSessionKey);
+            byte[] ivByte = decoder.decodeBuffer(baseIv);
 
             // 指定算法，模式，填充方式，创建一个Cipher
             Cipher cipher = Cipher.getInstance("AES/CBC/PKCS7Padding", "BC");
@@ -75,45 +69,11 @@ public class AesUtils {
             byte[] result = cipher.doFinal(dataByte);
 
             // 对结果进行Base64编码，否则会得到一串乱码，不便于后续操作
-            encryptedData = encoder.encodeToString(result);
+            encryptedData = encoder.encode(result);
 
         } catch (Exception e) {
             e.printStackTrace();
         }
-
-        return encryptedData;
-    }
-
-    public static String encrypt(String data, String sessionKey, String iv)
-            throws Exception {
-
-        // 加密之前，先从Base64格式还原到原始格式
-        Decoder decoder = Base64.getDecoder();
-        byte[] dataByte = decoder.decode(data);
-        byte[] keyByte = decoder.decode(sessionKey);
-        byte[] ivByte = decoder.decode(iv);
-
-        String encryptedData = null;
-
-        // 指定算法，模式，填充方式，创建一个Cipher
-        Cipher cipher = Cipher.getInstance("AES/CBC/PKCS7Padding", "BC");
-
-        // 生成Key对象
-        Key sKeySpec = new SecretKeySpec(keyByte, "AES");
-
-        // 把向量初始化到算法参数
-        AlgorithmParameters params = AlgorithmParameters.getInstance("AES");
-        params.init(new IvParameterSpec(ivByte));
-
-        // 指定用途，密钥，参数 初始化Cipher对象
-        cipher.init(Cipher.ENCRYPT_MODE, sKeySpec, params);
-
-        // 指定加密
-        byte[] result = cipher.doFinal(dataByte);
-
-        // 对结果进行Base64编码，否则会得到一串乱码，不便于后续操作
-        Base64.Encoder encoder = Base64.getEncoder();
-        encryptedData = encoder.encodeToString(result);
 
         return encryptedData;
     }
